<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Autofill">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_18">

        <ImageView
            android:layout_width="366dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_phone"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"/>

        <EditText
            android:id="@+id/edt_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:hint="@string/hint_address"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:layout_marginTop="@dimen/define_dimen_12"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_xsmall"
            />

        <EditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_5"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:drawableEnd="@drawable/baseline_remove_red_eye_24"
            android:hint="@string/hint_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColorHint="@color/colorAccent"
            android:textColor="@color/textColorHeading"
            android:textSize="@dimen/text_size_small"
            tools:ignore="Autofill"
            />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- EditText for OTP Code input -->
            <EditText
                android:id="@+id/edt_Otp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/confirm_OTP"
                android:inputType="number"
                android:padding="@dimen/define_dimen_10"
                android:paddingStart="@dimen/define_dimen_5"
                android:paddingEnd="@dimen/define_dimen_5"
                android:textColor="@color/textColorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="@dimen/text_size_small" />

            <!-- Button to send OTP Code -->
            <Button
                android:id="@+id/btn_sendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:padding="@dimen/define_dimen_10"
                android:text="@string/send_OTP"
                android:textColor="@color/textColorSecondary"
                android:textSize="@dimen/text_size_xxsmall" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_14"
            android:layout_marginBottom="@dimen/define_dimen_10"
            android:textAllCaps="false"
            android:background="@drawable/bg_button_disable_corner_16"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginTop="@dimen/define_dimen_22"
        android:orientation="horizontal"
        android:padding="@dimen/define_dimen_18">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/have_account"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_small"
            />

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_marginStart="@dimen/define_dimen_6"
            android:textSize="@dimen/text_size_small"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            />
    </LinearLayout>



</RelativeLayout>