<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="Autofill, ContentDescription">

    <include layout="@layout/layout_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/define_dimen_18">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_30"
            android:hint="@string/hint_email"
            android:padding="@dimen/define_dimen_14"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:textColor="@color/textColorPrimary"
            android:textSize="@dimen/text_size_small" />

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_10"
            android:background="@drawable/bg_white_corner_16_border_gray"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="8dp">

            <!-- EditText for OTP Code input -->
            <EditText
                android:id="@+id/textOtp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:hint="@string/confirm_OTP"
                android:inputType="number"
                android:padding="@dimen/define_dimen_10"
                android:paddingStart="@dimen/define_dimen_5"
                android:paddingEnd="@dimen/define_dimen_5"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/text_size_small" />

            <!-- Button to send OTP Code -->
            <Button
                android:id="@+id/btn_sendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorAccent"
                android:padding="@dimen/define_dimen_10"
                android:text="@string/send_OTP"
                android:textSize="@dimen/text_size_xsmall"
                android:textColor="@color/textColorSecondary" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/define_dimen_20"
            android:background="@drawable/bg_button_disable_corner_16"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small" />
    </LinearLayout>
</RelativeLayout>